@@ -1,3 +1,9 @@
+2006-09-27 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/x11/XGServerWindow.m: Add more debug for checking style
+	Use _NET_FRAME_EXTENTS or _KDE_NET_WM_FRAME_STRUT to determine
+	offsets if our window manager supports them.
+
 2006-09-26 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/x11/XGServerWindow.m: Add more debug for checking style
